[package]
name = "copperhead_test"
version = "0.1.0"
authors = ["Thomas J. Grady II <thomasg2@vt.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

copperhead_core = { version = "0", path = "../copperhead_core" }
